# duckaverb-vst

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake.yml
DOCS/: DEVELOPMENT.md  UI_DESIGN.md  WINDOWS_INSTALL.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
